@@ -534,12 +534,6 @@ class CAction extends CApiService {
 			// Set default values for recovery operations and their messages.
 			if (array_key_exists('recovery_operations', $action)) {
 				foreach ($action['recovery_operations'] as &$operation) {
-					if (array_key_exists('operationid', $operation)) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect value "%1$s" for "%2$s" field.',
-							$operation['operationid'], 'operationid'
-						));
-					}
-
 					if ($operation['operationtype'] == OPERATION_TYPE_MESSAGE
 							|| $operation['operationtype'] == OPERATION_TYPE_RECOVERY_MESSAGE) {
 						$message = (array_key_exists('opmessage', $operation) && is_array($operation['opmessage']))
@@ -565,12 +559,6 @@ class CAction extends CApiService {
 			// Set default values for acknowledge operations and their messages.
 			if (array_key_exists('acknowledge_operations', $action)) {
 				foreach ($action['acknowledge_operations'] as &$operation) {
-					if (array_key_exists('operationid', $operation)) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect value "%1$s" for "%2$s" field.',
-							$operation['operationid'], 'operationid'
-						));
-					}
-
 					if ($operation['operationtype'] == OPERATION_TYPE_MESSAGE
 							|| $operation['operationtype'] == OPERATION_TYPE_ACK_MESSAGE) {
 						$message = (array_key_exists('opmessage', $operation) && is_array($operation['opmessage']))
@@ -2808,29 +2796,39 @@ class CAction extends CApiService {
 			if ((!array_key_exists('operations', $action) || !$action['operations'])
 					&& (!array_key_exists('recovery_operations', $action) || !$action['recovery_operations'])
 					&& (!array_key_exists('acknowledge_operations', $action) || !$action['acknowledge_operations'])) {
-				self::exception(
-					ZBX_API_ERROR_PARAMETERS,
-					_s('Action "%1$s" no operations defined.', $action['name'])
-				);
+				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%1$s" no operations defined.', $action['name']));
 			}
-			elseif (array_key_exists('operations', $action) && $action['operations']) {
+
+			if (array_key_exists('operations', $action)) {
 				foreach ($action['operations'] as $operation) {
+					if (array_key_exists('operationid', $operation)) {
+						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect input parameters.'));
+					}
+
 					$operation['recovery'] = ACTION_OPERATION;
 					$operation['eventsource'] = $action['eventsource'];
 					$operations_to_validate[] = $operation;
 				}
 			}
 
-			if (array_key_exists('recovery_operations', $action) && $action['recovery_operations']) {
-				foreach ($action['recovery_operations'] as $recovery_operation) {
-					$recovery_operation['recovery'] = ACTION_RECOVERY_OPERATION;
-					$recovery_operation['eventsource'] = $action['eventsource'];
-					$operations_to_validate[] = $recovery_operation;
+			if (array_key_exists('recovery_operations', $action)) {
+				foreach ($action['recovery_operations'] as $operation) {
+					if (array_key_exists('operationid', $operation)) {
+						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect input parameters.'));
+					}
+
+					$operation['recovery'] = ACTION_RECOVERY_OPERATION;
+					$operation['eventsource'] = $action['eventsource'];
+					$operations_to_validate[] = $operation;
 				}
 			}
 
-			if (array_key_exists('acknowledge_operations', $action) && $action['acknowledge_operations']) {
+			if (array_key_exists('acknowledge_operations', $action)) {
 				foreach ($action['acknowledge_operations'] as $operation) {
+					if (array_key_exists('operationid', $operation)) {
+						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect input parameters.'));
+					}
+
 					$operation['recovery'] = ACTION_ACKNOWLEDGE_OPERATION;
 					$operation['eventsource'] = $action['eventsource'];
 					$operations_to_validate[] = $operation;
